fix   letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  letter-spacing: -0.03px;
 }
 
 /* Remove default margin */
@@ -69,6 +68,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  letter-spacing: -0.05px;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -249,6 +249,7 @@ main {
 .card__nutrition p {
   margin-bottom: 1.5rem;
   color: hsl(30, 10%, 34%);
+  line-height: normal;
 }
 .card__table {
   display: grid;
